<resources>
    <string-array name="courses">
        <item>all courses</item>
        <item>1 course</item>
        <item>2 course</item>
        <item>3 course</item>
        <item>4 course</item>
        <item>5 course</item>
        <item>6 course</item>
    </string-array>

    <string-array name="institutes">
        <item>all institutes</item>
        <item>1 institute</item>
        <item>2 institute</item>
        <item>3 institute</item>
        <item>4 institute</item>
        <item>5 institute</item>
        <item>6 institute</item>
        <item>7 institute</item>
        <item>8 institute</item>
        <item>9 institute</item>
        <item>10 institute</item>
        <item>11 institute</item>
        <item>12 institute</item>
    </string-array>

    <string name="app_name">ScheduleMAI</string>
    <string name="week_dialog_title">Choose week</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="present_day">Present day</string>
    <string name="course">Course</string>
    <string name="institute">Institute</string>
    <string name="group">Group</string>
    <string name="find_groups_button_text">Find</string>
    <string name="change_group_text">Change group</string>
    <string name="communication_error">Error in getting data</string>
    <string name="network_connection_lost">Network connection lost</string>
</resources>